# tauri-dll-injector

./: README.md  index.html  package.json  pnpm-lock.yaml
src/: App.svelte  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  task.rs
src/lib/: Taskslist.svelte  store.ts
src/lib/type/: t.ts
